--- a/lewis/ml_test_ridge_1123.ipynb
+++ b/lewis/ml_test_ridge_1123.ipynb
@@ -51,7 +51,8 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -129,7 +130,7 @@
     "pip = Pipeline([('ttf',ttf), ('lpo',lpo), ('imp',imp), ('ss',ss), ('clf',clf)])  # a Pipeline wrapper to chain'em up\n",
     "def LogPlusOne_score(ground_truth, predictions, lpo=lpo):\n",
     "    return np.float64(np.mean(np.abs(ground_truth - (np.power(10, predictions) - 1))))\n",
-    "scorer = make_scorer(LogPlusOne_score, greater_is_better=True)  # define scoring metric"
+    "scorer = make_scorer(LogPlusOne_score, greater_is_better=False)  # define scoring metric"
    ]
   },
   {
