--- a/lewis/ml_test_blending_1126_[pks].ipynb
+++ b/lewis/ml_test_blending_1126_[pks].ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -72,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 1.1221 secs\n"
+      "Time elapsed: 1.1206 secs\n"
      ]
     }
    ],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -100,13 +100,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(60870, 132) (60870,)\n"
+      "(60870, 133) (60870,)\n"
      ]
     }
    ],
    "source": [
-    "X = trn_withRef_comb.loc[:, 'minutes_past_mean':'Kdp_5x5_90th_max']  # NOTE: used range slicing on column\n",
     "y = trn_withRef_comb['Expected_mean']\n",
+    "trn_withRef_comb = trn_withRef_comb.drop(['Expected_mean'], axis =1)\n",
+    "\n",
+    "trn_withRef_comb['MP'] = pow(pow(10, trn_withRef_comb['Ref_mean']/10)/200, 0.625 * 0.82)\n",
+    "X = trn_withRef_comb.loc[:, 'minutes_past_mean':'MP']  # NOTE: used range slicing on column\n",
+    "\n",
     "print X.shape, y.shape"
    ]
   },
