--- a/lewis/ml_test_blending_1126_[pks].ipynb
+++ b/lewis/ml_test_blending_1126_[pks].ipynb
@@ -217,7 +217,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
