--- a/Quynh/test_KmeansBatch.ipynb
+++ b/Quynh/test_KmeansBatch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -110,38 +110,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hoho\n",
-      "hoho1\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "<type 'numpy.ndarray'>\n",
-      "6349375\n",
-      "0\n"
+      "('For n_clusters =', 2, 'The average silhouette_score is :', 0.48891333752963856)\n",
+      "('For n_clusters =', 3, 'The average silhouette_score is :', 0.44517403926961135)\n",
+      "('For n_clusters =', 4, 'The average silhouette_score is :', 0.41277032313104894)\n",
+      "('For n_clusters =', 5, 'The average silhouette_score is :', 0.39816363985214059)\n",
+      "('For n_clusters =', 6, 'The average silhouette_score is :', 0.3700076395327852)\n",
+      "('For n_clusters =', 7, 'The average silhouette_score is :', 0.3519243641626642)\n",
+      "('For n_clusters =', 8, 'The average silhouette_score is :', 0.35434198287123497)\n",
+      "('For n_clusters =', 9, 'The average silhouette_score is :', 0.337065294318449)\n",
+      "('For n_clusters =', 10, 'The average silhouette_score is :', 0.29815113225192724)\n",
+      "('For n_clusters =', 11, 'The average silhouette_score is :', 0.31700547084772407)\n",
+      "('For n_clusters =', 12, 'The average silhouette_score is :', 0.31164737608464133)\n",
+      "('For n_clusters =', 13, 'The average silhouette_score is :', 0.33806127360298216)\n",
+      "('For n_clusters =', 14, 'The average silhouette_score is :', 0.28787402020435021)\n",
+      "('For n_clusters =', 15, 'The average silhouette_score is :', 0.30680512990719899)\n",
+      "('For n_clusters =', 16, 'The average silhouette_score is :', 0.33014555587471367)\n",
+      "('For n_clusters =', 17, 'The average silhouette_score is :', 0.31576821062849558)\n",
+      "('For n_clusters =', 18, 'The average silhouette_score is :', 0.29219570403670214)\n",
+      "('For n_clusters =', 19, 'The average silhouette_score is :', 0.3241296858264901)\n",
+      "('For n_clusters =', 20, 'The average silhouette_score is :', 0.32864292937877571)\n",
+      "('For n_clusters =', 21, 'The average silhouette_score is :', 0.27989267267037721)\n",
+      "('For n_clusters =', 22, 'The average silhouette_score is :', 0.30576126079945481)\n",
+      "('For n_clusters =', 23, 'The average silhouette_score is :', 0.29447450939882847)\n",
+      "('For n_clusters =', 24, 'The average silhouette_score is :', 0.29760273934244186)\n",
+      "('For n_clusters =', 25, 'The average silhouette_score is :', 0.29376526362112365)\n",
+      "('For n_clusters =', 26, 'The average silhouette_score is :', 0.30055840992555333)\n",
+      "('For n_clusters =', 27, 'The average silhouette_score is :', 0.30342165080369726)\n",
+      "('For n_clusters =', 28, 'The average silhouette_score is :', 0.29166710500334647)\n",
+      "('For n_clusters =', 29, 'The average silhouette_score is :', 0.29010391554250597)\n"
      ]
     },
     {
-     "ename": "IndexError",
-     "evalue": "list assignment index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-3abb9a26d299>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mestimator\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mClusteringFilterBatch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax_clusters\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m20\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0msilhouette_avg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mestimator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpre_X\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mopt_idx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msilhouette_avg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msilhouette_avg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0msilhouette\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mopt_odx\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m/home/jingchu/.ipython/mlclass_anrg/Quynh/kmeans_batch.py\u001b[0m in \u001b[0;36mpredict\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m     98\u001b[0m             \u001b[0msilhouette_avg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtemp_score\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     99\u001b[0m             \u001b[1;32mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msilhouette_avg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 100\u001b[1;33m             \u001b[0msilhouette_avg\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnum_clusters\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msilhouette_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mestimator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlabels_\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmetric\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'euclidean'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msample_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    101\u001b[0m             \u001b[1;31m#silhouette_avg[num_clusters-2] = silhouette_score(X, cluster_labels)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    102\u001b[0m             \u001b[1;32mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"For n_clusters =\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_clusters\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"The average silhouette_score is :\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msilhouette_avg\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnum_clusters\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list assignment index out of range"
-     ]
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "silhouette = []\n",
     "\n",
     "\n",
-    "estimator=ClusteringFilterBatch(max_clusters = 20)\n",
+    "\n",
+    "estimator=ClusteringFilterBatch(max_clusters = 30)\n",
     "silhouette_avg = estimator.predict(pre_X)\n",
     "opt_idx = silhouette_avg.index(max(silhouette_avg))\n",
-    "silhouette.append(opt_odx+2)\n",
-    "    \n",
+    "silhouette = opt_idx+2\n",
+    "\n",
     "silhouette"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
