--- a/lewis/ml_test_blending_detmodels_TargetAnalysis.ipynb
+++ b/lewis/ml_test_blending_detmodels_TargetAnalysis.ipynb
@@ -200,7 +200,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
