--- a/lewis/ml_test_blending_detmodels_1130_13598.ipynb
+++ b/lewis/ml_test_blending_detmodels_1130_13598.ipynb
@@ -172,7 +172,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
