--- a/lewis/ml_test_ClassRegress_blending_detmodels.ipynb
+++ b/lewis/ml_test_ClassRegress_blending_detmodels.ipynb
@@ -59,7 +59,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 33.2144 secs\n"
+      "Time elapsed: 11.8328 secs\n"
      ]
     }
    ],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -155,8 +155,8 @@
    "source": [
     "reg_sub = [None, None]\n",
     "for i in [0, 1]:\n",
-    "    base1 = Pipeline([('sel', LeaveTailK(K=4)), ('rf', RandomForestRegressor(n_estimators=500, max_features=0.2, max_depth=25, n_jobs=14))], copy = False)\n",
-    "    base2 = Pipeline([('sel', LeaveTailK(K=4)), ('xgb', xgb.sklearn.XGBRegressor(n_estimators=500, nthread=14))], copy = False)\n",
+    "    base1 = Pipeline([('sel', LeaveTailK(K=4)), ('rf', RandomForestRegressor(n_estimators=500, max_features=0.2, max_depth=25, n_jobs=7))], copy = False)\n",
+    "    base2 = Pipeline([('sel', LeaveTailK(K=4)), ('xgb', xgb.sklearn.XGBRegressor(n_estimators=500, nthread=7))], copy = False)\n",
     "    base3 = Pipeline([('sel', LeaveTailK(K=4)), ('ri', Ridge(alpha=2.0))], copy = False)\n",
     "    base4 = Pipeline([('sel', LeaveTailK(K=4)), ('la', Lasso(alpha=0.01))], copy = False)\n",
     "    base5 = Pipeline([('sel', SelectK2Last(K=4)), ('mp', DummyRegressor())], copy = False)\n",
@@ -566,13 +566,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "clf = xgb.sklearn.XGBClassifier(n_estimators=500, nthread=14)\n",
+    "clf = xgb.sklearn.XGBClassifier(n_estimators=500, nthread=7)\n",
     "reg = ClassifiedRegressor(labeling_thresh=np.log10(1+45) , classifier=clf, proba_thresh=0, regressors=reg_sub, verbose=1)\n",
     "pip = Pipeline([('lpo',lpo), ('imp',imp), ('ss',ss), ('reg',reg)], copy=True)  # a Pipeline wrapper to chain'em up"
    ]
@@ -660,7 +660,24 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training classifier, total samples = {}... label False subtotal 640205... label True subtotal 18195... fitting regressors, total samples = 658400... regressor 0 fits label False subtotal 640205... regressor 1 fits label True subtotal 18195...  \n",
+      "Regressor prediction, total samples = 73156... regressor 0 predicts label False subtotal 73156... regressor 1 predicts label True subtotal 0...  \n",
+      "=====th = 0.0=====(TP 0, FN 1960, TN 71196, FP 0)===score 21.1579417502\n",
+      "Training classifier, total samples = {}... label False subtotal 640205... label True subtotal 18195... regressor 1 fits label True subtotal 18195...  \n",
+      "Regressor prediction, total samples = 73156... regressor 0 predicts label False subtotal 73156... regressor 1 predicts label True subtotal 0...  \n",
+      "=====th = 0.1=====(TP 0, FN 1960, TN 71196, FP 0)===score 21.1583132542\n",
+      "Training classifier, total samples = {}... label False subtotal 640205... label True subtotal 18195... fitting regressors, total samples = 658400... regressor 0 fits label False subtotal 640205... regressor 1 fits label True subtotal 18195...  \n",
+      "Regressor prediction, total samples = 73156... regressor 0 predicts label False subtotal 73155... regressor 1 predicts label True subtotal 1...  \n",
+      "=====th = 0.2=====(TP 1, FN 1959, TN 71196, FP 0)===score 21.155595112\n",
+      "Training classifier, total samples = {}... label False subtotal 640205... label True subtotal 18195... "
+     ]
+    }
+   ],
    "source": [
     "pip_sub = Pipeline([('lpo', lpo), ('imp', imp), ('ss', ss), ('clf', pip.steps[3][1].classifier)], copy=True)\n",
     "score = []\n",
@@ -1006,7 +1023,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
