--- a/lewis/ml_test_range_classification.ipynb
+++ b/lewis/ml_test_range_classification.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -60,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 14.9686 secs\n"
+      "Time elapsed: 24.8666 secs\n"
      ]
     }
    ],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -129,6 +129,47 @@
     "del trn_withRef_comb\n",
     "print X.shape, y.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['minutes_past_max',\n",
+       " 'radardist_km_max',\n",
+       " 'Ref_max',\n",
+       " 'Ref_5x5_10th_max',\n",
+       " 'Ref_5x5_50th_max',\n",
+       " 'Ref_5x5_90th_max',\n",
+       " 'RefComposite_max',\n",
+       " 'RefComposite_5x5_10th_max',\n",
+       " 'RefComposite_5x5_50th_max',\n",
+       " 'RefComposite_5x5_90th_max',\n",
+       " 'RhoHV_max',\n",
+       " 'RhoHV_5x5_10th_max',\n",
+       " 'RhoHV_5x5_50th_max',\n",
+       " 'RhoHV_5x5_90th_max',\n",
+       " 'Zdr_max',\n",
+       " 'Zdr_5x5_10th_max',\n",
+       " 'Zdr_5x5_50th_max',\n",
+       " 'Zdr_5x5_90th_max',\n",
+       " 'Kdp_max',\n",
+       " 'Kdp_5x5_10th_max',\n",
+       " 'Kdp_5x5_50th_max',\n",
+       " 'Kdp_5x5_90th_max']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
