--- a/lewis/ml_test_ClassRegress_blending_detmodels_1204_2.ipynb
+++ b/lewis/ml_test_ClassRegress_blending_detmodels_1204_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -59,7 +59,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 11.9503 secs\n"
+      "Time elapsed: 33.2757 secs\n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -140,7 +140,7 @@
     "#\n",
     "seed = 12345\n",
     "n_tree = 500\n",
-    "n_jobs = 7\n",
+    "n_jobs = 15\n",
     "#\n",
     "lpo = LogPlusOne()\n",
     "imp = Imputer(strategy='median', copy=False)  # Get a imputor with column-mean filling config\n",
@@ -163,7 +163,7 @@
     "    reg_sub[i] = BlendedRegressor(base_models=base_models, blending_model=blender, blending_split=0.15, with_feature=True, random_state=seed)\n",
     "reg_sub = tuple(reg_sub)\n",
     "clf = xgb.sklearn.XGBClassifier(n_estimators=n_tree, nthread=n_jobs , seed=seed)\n",
-    "reg = ClassifiedRegressor(labeling_thresh=np.log10(1+45) , classifier=clf, proba_thresh=0.6, regressors=reg_sub, verbose=1)\n",
+    "reg = ClassifiedRegressor(labeling_thresh=np.log10(1+45) , classifier=clf, proba_thresh=0.4, regressors=reg_sub, verbose=1)\n",
     "pip = Pipeline([('lpo',lpo), ('imp',imp), ('ss',ss), ('reg',reg)], copy=True)  # a Pipeline wrapper to chain'em up"
    ]
   },
@@ -176,9 +176,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -186,58 +186,12 @@
      "output_type": "stream",
      "text": [
       "[CV] no parameters to be set .........................................\n",
-      "Training classifier, total samples = 658400... label False subtotal 640131... label True subtotal 18269... fitting regressors, total samples = 658400... regressor 0 fits label False subtotal 640131... regressor 1 fits label True subtotal 18269...  \n",
-      "Regressor prediction, total samples = 73156... regressor 0 predicts label False subtotal 73156... regressor 1 predicts label True subtotal 0...  \n",
-      "[CV] .............. no parameters to be set, score=-22.273793 -  54.8s\n",
-      "[CV] no parameters to be set .........................................\n",
-      "Training classifier, total samples = 658400... label False subtotal 640143... label True subtotal 18257... fitting regressors, total samples = 658400... regressor 0 fits label False subtotal 640143... regressor 1 fits label True subtotal 18257...  \n",
-      "Regressor prediction, total samples = 73156... regressor 0 predicts label False subtotal 73156... regressor 1 predicts label True subtotal 0...  \n",
-      "[CV] .............. no parameters to be set, score=-22.544937 -  54.8s\n",
-      "[CV] no parameters to be set .........................................\n",
-      "Training classifier, total samples = 658400... label False subtotal 640250... label True subtotal 18150... fitting regressors, total samples = 658400... regressor 0 fits label False subtotal 640250... regressor 1 fits label True subtotal 18150...  \n",
-      "Regressor prediction, total samples = 73156... regressor 0 predicts label False subtotal 73155... regressor 1 predicts label True subtotal 1...  \n",
-      "[CV] .............. no parameters to be set, score=-23.426886 -  54.6s\n",
-      "[CV] no parameters to be set .........................................\n",
-      "Training classifier, total samples = 658400... label False subtotal 640278... label True subtotal 18122... fitting regressors, total samples = 658400... regressor 0 fits label False subtotal 640278... regressor 1 fits label True subtotal 18122...  \n",
-      "Regressor prediction, total samples = 73156... regressor 0 predicts label False subtotal 73156... regressor 1 predicts label True subtotal 0...  \n",
-      "[CV] .............. no parameters to be set, score=-24.938773 -  54.6s\n",
-      "[CV] no parameters to be set .........................................\n",
-      "Training classifier, total samples = 658400... label False subtotal 640227... label True subtotal 18173... fitting regressors, total samples = 658400... regressor 0 fits label False subtotal 640227... regressor 1 fits label True subtotal 18173...  \n",
-      "Regressor prediction, total samples = 73156... regressor 0 predicts label False subtotal 73156... regressor 1 predicts label True subtotal 0...  \n",
-      "[CV] .............. no parameters to be set, score=-23.780573 -  54.7s\n",
-      "[CV] no parameters to be set .........................................\n",
-      "Training classifier, total samples = 658400... label False subtotal 640678... label True subtotal 17722... fitting regressors, total samples = 658400... regressor 0 fits label False subtotal 640678... regressor 1 fits label True subtotal 17722...  \n",
-      "Regressor prediction, total samples = 73156... regressor 0 predicts label False subtotal 73156... regressor 1 predicts label True subtotal 0...  \n",
-      "[CV] .............. no parameters to be set, score=-23.942321 -  53.7s\n",
-      "[CV] no parameters to be set .........................................\n",
-      "Training classifier, total samples = 658401... label False subtotal 640001... label True subtotal 18400... fitting regressors, total samples = 658401... regressor 0 fits label False subtotal 640001... regressor 1 fits label True subtotal 18400...  \n",
-      "Regressor prediction, total samples = 73155... regressor 0 predicts label False subtotal 73155... regressor 1 predicts label True subtotal 0...  \n",
-      "[CV] .............. no parameters to be set, score=-19.930151 -  57.0s\n",
-      "[CV] no parameters to be set .........................................\n",
-      "Training classifier, total samples = 658401... label False subtotal 640244... label True subtotal 18157... fitting regressors, total samples = 658401... regressor 0 fits label False subtotal 640244... regressor 1 fits label True subtotal 18157...  \n",
-      "Regressor prediction, total samples = 73155... regressor 0 predicts label False subtotal 73155... regressor 1 predicts label True subtotal 0...  \n",
-      "[CV] .............. no parameters to be set, score=-25.623868 -  58.2s\n",
-      "[CV] no parameters to be set .........................................\n",
-      "Training classifier, total samples = 658401... label False subtotal 640315... label True subtotal 18086... fitting regressors, total samples = 658401... regressor 0 fits label False subtotal 640315... regressor 1 fits label True subtotal 18086...  \n",
-      "Regressor prediction, total samples = 73155... regressor 0 predicts label False subtotal 73155... regressor 1 predicts label True subtotal 0...  \n",
-      "[CV] .............. no parameters to be set, score=-23.691809 -  54.5s\n",
-      "[CV] no parameters to be set .........................................\n",
-      "Training classifier, total samples = 658401... label False subtotal 640342... label True subtotal 18059... fitting regressors, total samples = 658401... regressor 0 fits label False subtotal 640342... regressor 1 fits label True subtotal 18059...  \n",
-      "Regressor prediction, total samples = 73155... regressor 0 predicts label False subtotal 73155... regressor 1 predicts label True subtotal 0...  \n",
-      "[CV] .............. no parameters to be set, score=-21.476099 -  54.1s\n",
-      "-23.1629209816 1.5816728386\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:  9.2min finished\n"
+      "Training classifier, total samples = 658400... label False subtotal 640131... label True subtotal 18269... "
      ]
     }
    ],
    "source": [
-    "# label at 45, class xgb 500, proba_thresh=0\n",
+    "# label at 45, class xgb 500, proba_thresh=0.4\n",
     "scores = cross_val_score(estimator=pip, X=X, y=y, scoring=scorer, cv=10, n_jobs=1, verbose=3)\n",
     "print np.mean(scores), np.std(scores)"
    ]
@@ -259,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
