--- a/lewis/ml_test_range_classification-Copy1.ipynb
+++ b/lewis/ml_test_range_classification-Copy1.ipynb
@@ -44,9 +44,9 @@
    },
    "outputs": [],
    "source": [
-    "trn = pd.read_csv('../data/train.csv')\n",
+    "# trn = pd.read_csv('../data/train.csv')\n",
     "# trn = pd.read_csv('../data/train_10.csv', index_col=0)  # column #0 in our file is DataFrame index\n",
-    "# trn = pd.read_csv('../data/train_1.csv', index_col=0)"
+    "trn = pd.read_csv('../data/train_1.csv', index_col=0)"
    ]
   },
   {
@@ -60,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 14.7744 secs\n"
+      "Time elapsed: 3.1777 secs\n"
      ]
     }
    ],
@@ -117,7 +117,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(731556, 136) (731556,)\n"
+      "(60870, 136) (60870,)\n"
      ]
     }
    ],
@@ -128,6 +128,89 @@
     "# Garbage collection\n",
     "del trn_withRef_comb\n",
     "print X.shape, y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "minutes_past_mean      29.000000\n",
+       "minutes_past_std       14.142136\n",
+       "minutes_past_median    29.000000\n",
+       "minutes_past_count      1.000000\n",
+       "minutes_past_min       28.000000\n",
+       "minutes_past_max       30.000000\n",
+       "radardist_km_mean      10.000000\n",
+       "radardist_km_std        0.000000\n",
+       "radardist_km_median    10.000000\n",
+       "radardist_km_count      1.000000\n",
+       "radardist_km_min       10.000000\n",
+       "radardist_km_max       10.000000\n",
+       "Ref_mean               22.500000\n",
+       "Ref_std                 3.889087\n",
+       "Ref_median             22.500000\n",
+       "Ref_count               1.000000\n",
+       "Ref_min                22.500000\n",
+       "Ref_max                22.500000\n",
+       "Ref_5x5_10th_mean      20.000000\n",
+       "Ref_5x5_10th_std        2.828427\n",
+       "Ref_5x5_10th_median    20.000000\n",
+       "Ref_5x5_10th_count      1.000000\n",
+       "Ref_5x5_10th_min       19.500000\n",
+       "Ref_5x5_10th_max       20.000000\n",
+       "Ref_5x5_50th_mean      22.500000\n",
+       "Ref_5x5_50th_std        2.828427\n",
+       "Ref_5x5_50th_median    22.500000\n",
+       "Ref_5x5_50th_count      1.000000\n",
+       "Ref_5x5_50th_min       22.500000\n",
+       "Ref_5x5_50th_max       23.000000\n",
+       "                         ...    \n",
+       "Zdr_5x5_90th_min        1.625000\n",
+       "Zdr_5x5_90th_max        1.687500\n",
+       "Kdp_mean                0.000000\n",
+       "Kdp_std                 1.732409\n",
+       "Kdp_median              0.000000\n",
+       "Kdp_count               1.000000\n",
+       "Kdp_min                 0.000000\n",
+       "Kdp_max                 0.000000\n",
+       "Kdp_5x5_10th_mean      -2.820007\n",
+       "Kdp_5x5_10th_std        0.997012\n",
+       "Kdp_5x5_10th_median    -2.820007\n",
+       "Kdp_5x5_10th_count      0.000000\n",
+       "Kdp_5x5_10th_min       -2.820007\n",
+       "Kdp_5x5_10th_max       -2.800003\n",
+       "Kdp_5x5_50th_mean       0.000000\n",
+       "Kdp_5x5_50th_std        0.735386\n",
+       "Kdp_5x5_50th_median     0.000000\n",
+       "Kdp_5x5_50th_count      1.000000\n",
+       "Kdp_5x5_50th_min        0.000000\n",
+       "Kdp_5x5_50th_max        0.000000\n",
+       "Kdp_5x5_90th_mean       3.500000\n",
+       "Kdp_5x5_90th_std        1.251582\n",
+       "Kdp_5x5_90th_median     3.500000\n",
+       "Kdp_5x5_90th_count      1.000000\n",
+       "Kdp_5x5_90th_min        3.224998\n",
+       "Kdp_5x5_90th_max        3.519989\n",
+       "MP                      0.468577\n",
+       "KDP                     0.000000\n",
+       "KDP_ZDR                 0.000000\n",
+       "REF_ZDR                 0.000419\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.median(axis=0)"
    ]
   },
   {
@@ -601,7 +684,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
